// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxNav customize 1`] = `
<div>
  <h3
    class="nav nav-justified nav-pills bazinga"
    role="navigation"
  >
    Test
  </h3>
</div>
`;

exports[`CxNav example 1`] = `
<div>
  <ul
    class="nav"
    role="navigation"
  >
    <li
      class="nav-item"
    >
      <a
        aria-current="page"
        class="nav-link active"
        href="#"
      >
        Active
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="#"
      >
        Link
      </a>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-expanded="false"
        class="button primary caret"
        type="button"
      >
        A
      </button>
      <div
        aria-hidden="true"
        class="menu"
        style="position: absolute; top: 0px; left: 0px;"
      >
        <a
          class="menu-item"
          href="#"
        >
          B
        </a>
        <a
          class="menu-item"
          href="#"
        >
          C
        </a>
        <a
          class="menu-item"
          href="#"
        >
          D
        </a>
      </div>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="#"
      >
        Link
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        aria-disabled="true"
        class="nav-link disabled"
        disabled=""
        href="#"
        tabindex="-1"
      >
        Disabled
      </a>
    </li>
  </ul>
</div>
`;

exports[`loads and displays CxNav component 1`] = `
<div>
  <ul
    class="nav"
    role="navigation"
  >
    Test
  </ul>
</div>
`;
